Change Log for OpenXava project
===============================

- Fix: Sometimes there are blank rows in @OrderColumn lists.
- Fix: Element is not shown in @OrderColumn list if added modifying directly the element entity reference.   
- Fix: Bad size and scale in user interface when using @DecimalMax with a value with a decimal a part.
- Fix: Incorrect length for BigDecimal in the view when using 'scale' in @Column or 'fraction' in @Digits.
- Fix: Extra elements added to @ElementCollection when using float or double as property type.
- New article in documentation that links to an example in GitHub to create a desktop standalone app. 
- Documentation about total properties in view section of reference guide improved with more examples.
- First lesson of the new reporting course with JasperReports available in documentation with video.
- Fix: Total properties disappear from collection when adding or removing columns.
- Fix: Not allowed long email addresses for @Email, @Stereotype("EMAIL") and @Stereotype("EMAIL_LIST").
- Fix: Error/success messages fail to fade out if the next action opens a dialog.
- Fix: Infinite "Loading..." in list with @HtmlUnit properties with long text that contains double quotes.
- Fix: Error "Expected property name or '}' in JSON" with @TextArea with HTML code with double quotes. 
- Some new common use labels to be used in applications.

OpenXava 7.3.1 (2024-5-3)
-------------------------
- New method isJava21orBetter() in XSystem utility class.
- Added automated tests for date, datetime and popup calendar related issues.
- Commons IO upgraded to 2.16.1.
- JasperReports and fonts upgraded to 6.21.3.
- Groovy upgraded to 4.0.21.
- Embedded Tomcat used in development upgraded to 9.0.88.
- Documentation for working with IntelliJ improved.
- Fix: ModuleTestBase.setValue() does not work for properties annotated with @Email or @Stereotype("EMAIL").
- Fix: Save not reset with a @ReadOnly(onCreate=false) reference with nested reference keys fails.