@@ -34,7 +34,7 @@
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>		
-    		<version>8.3.0</version>
+    		<version>8.4.0</version>
 		</dependency>
 		-->
 		
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
-			<version>23.3.0.23.09</version>
+			<version>23.4.0.24.05</version>
 		</dependency>
 		-->
 		
