@@ -21,7 +21,7 @@
         <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;com.oracle.database.jdbc&lt;/groupId&gt;
     &lt;artifactId&gt;ojdbc8&lt;/artifactId&gt;
-    &lt;version&gt;23.3.0.23.09&lt;/version&gt;
+    &lt;version&gt;23.4.0.24.05&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre>Maybe the above code is already in your <i>pom.xml</i> but commented, in that case just uncomment it.<br>
         If the error <i>java.sql.SQLException: Non supported character set</i> appears, you can resolve it by adding the following dependency in the same file:
