@@ -21,7 +21,7 @@
         <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;com.oracle.database.jdbc&lt;/groupId&gt;
     &lt;artifactId&gt;ojdbc8&lt;/artifactId&gt;
-    &lt;version&gt;23.3.0.23.09&lt;/version&gt;
+    &lt;version&gt;23.4.0.24.05&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre>Quizás ya tengas este código en tu <i>pom.xml</i> pero comentado, en ese caso simplemente descoméntalo. <br>
         Si luego te aparece el error <i>java.sql.SQLException: Non supported character set</i>, puedes resolverlo añadiendo la siguiente dependencia en el mismo archivo:
